--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,10 @@
   "dependencies": {
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-scripts": "^5.0.1"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
