Add Html5QrCodeScanner reference

--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.0.0"
+    "@babel/plugin-proposal-private-property-in-object": "^7.0.0",
+    "html5-qrcode": "^2.3.8"
   },
   "scripts": {
     "start": "react-scripts start",
